[tool.poetry]
name = "tracker peru"
version = "0.1.0"
description = "API para rastrear pedidos"
authors = ["tjhon <fr.jhonk@gmail.com>"]
license = "GNU"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11.dev0"
requests = "2.32.3"
pydantic = "^2.9.1"
pytz = "^2024.2"
fastapi = "^0.114.2"
uvicorn = "^0.30.6"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"
rich = "^13.8.1"
numpy = "^2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
